Fleet UI: Unreleased - reinstate truncation fix locally, as caused global bugs

--- a/frontend/pages/SoftwarePage/SoftwareAddPage/SoftwareFleetMaintained/FleetMaintainedAppDetailsPage/FleetAppDetailsModal/_styles.scss
+++ b/frontend/pages/SoftwarePage/SoftwareAddPage/SoftwareFleetMaintained/FleetMaintainedAppDetailsPage/FleetAppDetailsModal/_styles.scss
@@ -9,4 +9,9 @@
   .react-tooltip {
     min-width: 120px;
   }
+
+  .data-set {
+    max-width: min-content;
+    overflow: hidden;
+  }
 }
